--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Rubik', sans-serif !important;
+    background-color: rgba(245, 222, 179, 0.479) !important;
 }
 
 img {
@@ -9,6 +10,7 @@ img {
 
 .card {
     width: 245px !important;
+    background-color: wheat !important;
 }
 
 .card-title {
@@ -100,7 +102,22 @@ textarea {
     place-items: center;
 }
 
-.fixedbutton:hover {
+.fixedbutton2 {
+    display: grid;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100px;
+    height: 75px;
+    margin: 15px;
+    background-color: #343a40;
+    border-radius: 10px;
+    box-shadow: 0px 7px 0px 0px gray;
+    place-items: center;
+}
+
+.fixedbutton:hover,
+.fixedbutton2:hover {
     box-shadow: 0px 0px 0px 0px gray;
     bottom: -7px
 }
@@ -134,6 +151,8 @@ textarea {
 }
 
 .library {
+    font-family: 'Lora', serif !important;
+    color: #C4AF9A !important;
     all: unset;
     cursor: pointer;
     font-size: 1.5rem;
